CARDS-1997: Use a concrete DataFilters in DataProcessorTest
Replace the mock(DataFilters.class) with full-method stubbing in
leaveForRootSubjectNodeWithFormSelectorsOption with an anonymous concrete
DataFilters implementation returning the same values. Clears the CodeQL
"mocking all public methods" warning without changing behavior or assertions.